--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jshint": "^2.9.3",
     "karma": "^1.2.0",
     "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-jshint-preprocessor": "0.0.6",
     "karma-phantomjs-launcher": "^1.0.2",
